syntax = "proto3";

package front.service.v1;
option go_package = "kratos-cms/gen/api/go/front/service/v1;v1";

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "common/pagination/pagination.proto";
import "comment/service/v1/comment.proto";

// 评论服务
service CommentService {
  // 获取评论列表
  rpc ListComment (pagination.PagingRequest) returns (comment.service.v1.ListCommentResponse) {
    option (google.api.http) = {
      get: "/blog/v1/comments"
    };

    option(gnostic.openapi.v3.operation) = {
      security: [
        {
          additional_properties: [
            {
              name: "OAuth2PasswordBearer";
              value: {
                value: []
              }
            }
          ]
        }
      ]
    };
  }

  // 获取评论数据
  rpc GetComment (comment.service.v1.GetCommentRequest) returns (comment.service.v1.Comment) {
    option (google.api.http) = {
      get: "/blog/v1/comments/{id}"
    };

    option(gnostic.openapi.v3.operation) = {
      security: [
        {
          additional_properties: [
            {
              name: "OAuth2PasswordBearer";
              value: {
                value: []
              }
            }
          ]
        }
      ]
    };
  }

  // 创建评论
  rpc CreateComment (comment.service.v1.CreateCommentRequest) returns (comment.service.v1.Comment) {
    option (google.api.http) = {
      post: "/blog/v1/comments"
      body: "*"
    };

    option(gnostic.openapi.v3.operation) = {
      security: [
        {
          additional_properties: [
            {
              name: "OAuth2PasswordBearer";
              value: {
                value: []
              }
            }
          ]
        }
      ]
    };
  }

  // 更新评论
  rpc UpdateComment (comment.service.v1.UpdateCommentRequest) returns (comment.service.v1.Comment) {
    option (google.api.http) = {
      put: "/blog/v1/comments/{id}"
      body: "comment"
    };

    option(gnostic.openapi.v3.operation) = {
      security: [
        {
          additional_properties: [
            {
              name: "OAuth2PasswordBearer";
              value: {
                value: []
              }
            }
          ]
        }
      ]
    };
  }

  // 删除评论
  rpc DeleteComment (comment.service.v1.DeleteCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/comments/{id}"
    };

    option(gnostic.openapi.v3.operation) = {
      security: [
        {
          additional_properties: [
            {
              name: "OAuth2PasswordBearer";
              value: {
                value: []
              }
            }
          ]
        }
      ]
    };
  }
}
